
message(STATUS " --BaseLib2Adapter")


set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/BaseLib2Adapter)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/BaseLib2Adapter)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/BaseLib2Adapter)

file(GLOB SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB SRC_FILES2 ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
file(GLOB HDR_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)


add_library(BaseLib2Adapter SHARED ${SRC_FILES} ${SRC_FILES2} ${HDR_FILES})
target_link_libraries(BaseLib2Adapter m dl nsl pthread rt ncurses)
target_link_libraries(BaseLib2Adapter  BaseLib2 )

